samples/_failures_safe/1761201547_df33b3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6580f2cf.c: In function ‘main’:
./samples/SAFE/__tmp_6580f2cf.c:179: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_6580f2cf.c:178:5: error: expected declaration or statement at end of input
  178 |     if
      |     ^~
